# homework_race

./: CMakeLists.txt  main.cpp
din_library_for_racing/air/: Broom.cpp  Broom.h  Eagle.cpp  Eagle.h  Magic_carpet.cpp  Magic_carpet.h
din_library_for_racing/ground/: all_terrain_boots.cpp  all_terrain_boots.h  camel.cpp  camel.h  camel_fast.cpp  camel_fast.h  centaur.cpp  centaur.h
